# ChangeLog for x11-libs/pango
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/pango/ChangeLog,v 1.212 2008/03/16 20:14:52 leio Exp $

*pango-1.20.0 (16 Mar 2008)

  16 Mar 2008; Mart Raudsepp <leio@gentoo.org> +pango-1.20.0.ebuild:
  New major release. Notable new feature includes addition of
  pango_layout_set_height() API for better ellipsizing handling in regards to
  a certain height before ellipsization begins. Also includes the usual set of
  performance and bug fixes. This ebuild contains highly experimental support
  for non-X environments, such as DirectFB via cairo

  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> pango-1.18.4.ebuild:
  Stable for HPPA (bug #208366).

  03 Feb 2008; Raúl Porcel <armin76@gentoo.org> pango-1.18.4.ebuild:
  alpha/ia64/sparc stable wrt #208366

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> pango-1.18.4.ebuild:
  Stable on amd64 wrt bug #208366.

  01 Feb 2008; Brent Baude <ranger@gentoo.org> pango-1.18.4.ebuild:
  Marking pango-1.18.4 ppc64 and ppc stable for bug 208366

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org> pango-1.18.4.ebuild:
  stable x86, bug 208366

  19 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -files/pango-1.10.2-slighthint.patch, -files/pango-1.11.3-xfonts.patch,
  -pango-1.12.3.ebuild:
  clean up old release

*pango-1.18.4 (19 Jan 2008)

  19 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org> +pango-1.18.4.ebuild:
  bump to 1.18.4

  04 Jan 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/pango-1.10.2-slighthint.patch, +files/pango-1.11.3-xfonts.patch,
  +pango-1.12.3.ebuild:
  Restore old version for no-nptl/2.4 profile

  04 Jan 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  -files/pango-1.0.99.020606-xfonts.patch,
  -files/pango-1.2.2-slighthint.patch, -files/pango-1.8.1-fontfix.patch,
  -files/pango-1.10.2-slighthint.patch, -files/pango-1.11.3-xfonts.patch,