@@ -6,16 +6,18 @@ DIST pango-1.16.5.tar.bz2 1345977 RMD160 98f38b2f8062e8f11e95a22824fa8c89664ffbb
 DIST pango-1.18.3.tar.bz2 1394980 RMD160 f57f92e81ba279bb1bb456e0d6075d3b4bf0e3d3 SHA1 b7b9e8dee0111dc877ceec33b8a47e17d3466ce7 SHA256 a1547a88ba9330956ce9f2f9e2ab74491e7344cc25fee4310b7f72c7e5f38db3
 DIST pango-1.18.4.tar.bz2 1406821 RMD160 73213249d86f9344572d27ce0720ee574b8cdecd SHA1 6a72db90bf82b151e18bd83d25f0844129cc93d6 SHA256 6fd3c82eb7aa1fd410cde21189b005095e882d8ab381a5b85bb7483ab7e7efdd
 DIST pango-1.20.0.tar.bz2 1412843 RMD160 e3d720cdd5cd08e9056d0cf07999e7d3bf8d228b SHA1 154e8d962d0eee83f58ec3bfee11902650e91da2 SHA256 3933d8fbfbc890ae29081a23e76be8da32024dd2a1bfe63c4cc77d607492e23b
+DIST pango-1.20.2.tar.bz2 1414871 RMD160 f6c8c4356eaed37e753600667d9838087f63631e SHA1 269390ec18f0323d712c2b50cfc030d15236d4d2 SHA256 d3abf17791f2634ba746f082b1697450ca3338a16891dfb7424d0d523985584e
 EBUILD pango-1.16.5.ebuild 1589 RMD160 c95c901c5c23a43de8a60e779c80be31f092aecb SHA1 6656cd4d3e7a7ac319d7c8ba70ed107f753fd84d SHA256 f9b7c3926e449352d5ff1d402dcf024e15754a8c9634c68c4da3229f2a184729
 EBUILD pango-1.18.3.ebuild 1590 RMD160 5b8dc8ea8894382683ad7059fbd0cd356a3765dd SHA1 f25bb48cb628c3a518cae37cda1621b2d444da1d SHA256 2f36920ca99b939dcba6ef3a7abd03fe3c5e8f44f7c5a87012dcc91d1309b520
 EBUILD pango-1.18.4.ebuild 1592 RMD160 b7b5f159f4dd15af786bbeccc164011a280935fe SHA1 6a1884d756653d07235d34c59aa012621e9ddb5b SHA256 0f37da3fd7083608519b732e1f84b0f571e63372fde49ef05c2b8bc6799e5fd4
 EBUILD pango-1.20.0.ebuild 1695 RMD160 2a82e9daae475dfe1484175face26406c41fd5e3 SHA1 1d72ac18afbbdf24677d961167e70c1a05dbdf4c SHA256 01de7d4fd6e0813eb6fad53f179f3f5bc1b7fbd798ff7066ec0ad1fabe3fe99f
-MISC ChangeLog 25655 RMD160 f051d4a50fae6b8daca3bfb5e1f53a3c11e599f4 SHA1 28aad4b6f82d351baea38050913fbc47d800bbcd SHA256 4b9560cb78d973766ce9cace3e421f245c71efae0a3c6c4792a83b50f042396b
+EBUILD pango-1.20.2.ebuild 1780 RMD160 0aa04b8bacf6d1fdaae2a7d9bccfbbe2427f6323 SHA1 fe93abcd887371b0d84a2074f9fbdad6d31729ff SHA256 1706b33d1c3c6ab77f5b34c1141b769c102c25e55501e19e86245cedede86c03
+MISC ChangeLog 25824 RMD160 92fdc7574088398a4be3b24621270b8a05fafa35 SHA1 6247e0aabee161edf5a043045c07cd878e9d7135 SHA256 3f3a8e15bc09b1b1eb93cbda634c124d9467168e6d445e38f87fa1e7feb115b3
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.8 (GNU/Linux)
 
-iEYEARECAAYFAkfdgPgACgkQkeYb6olFHJeFxgCg0QTXVAINzK4YxGWY4XoyZHBj
-kNYAnAgxsBvcHMCLQb8Q88j8vQK0Wxvp
-=56V6
+iEYEARECAAYFAkf9XFAACgkQkeYb6olFHJdG0ACdG4OWY4/nVUbBzXHifDmj2XKT
+hBAAoLqvn2Zbej/idyhgxdIyaPuHStC6
+=jXso
 -----END PGP SIGNATURE-----
