@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/pango
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/pango/ChangeLog,v 1.212 2008/03/16 20:14:52 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/pango/ChangeLog,v 1.213 2008/04/10 00:16:07 leio Exp $
+
+*pango-1.20.2 (10 Apr 2008)
+
+  10 Apr 2008; Mart Raudsepp <leio@gentoo.org> +pango-1.20.2.ebuild:
+  New version adding support for Unicode 5.1. Also fixes a small bug.
 
 *pango-1.20.0 (16 Mar 2008)
 
